<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_quick_pay_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/quickPay_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text=" "
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <AutoCompleteTextView
        android:id="@+id/userAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/walletAuto"
        android:layout_alignRight="@+id/walletAuto"
        android:layout_below="@+id/walletAuto"
        android:layout_marginTop="14dp"
        android:completionThreshold="1"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:hint="@string/users"
        android:singleLine="true"
        android:textStyle="bold|normal" >

    </AutoCompleteTextView>

    <EditText
        android:id="@+id/amountQuickPay"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/whoPayQuickPay"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textStyle="italic" />

    <Button
        android:id="@+id/submitQuickPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/amountQuickPay"
        android:layout_alignRight="@+id/amountQuickPay"
        android:layout_below="@+id/commentsQuickPay"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/submit"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/whoPayQuickPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userAuto"
        android:layout_below="@+id/userAuto" >

        <RadioButton
            android:id="@+id/oweQuickPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/oweButton" />

        <RadioButton
            android:id="@+id/owedQuickPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/owedButton" />

    </RadioGroup>

    <EditText
        android:id="@+id/commentsQuickPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/whoPayQuickPay"
        android:layout_alignRight="@+id/amountQuickPay"
        android:layout_below="@+id/amountQuickPay"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/comments"
        android:inputType="textMultiLine" />

    <AutoCompleteTextView
        android:id="@+id/walletAuto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/quickPay_error"
        android:completionThreshold="1"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:hint="@string/wallets"
        android:singleLine="true"
        android:textStyle="bold|normal" >

        <requestFocus />
    </AutoCompleteTextView>

</RelativeLayout>