<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:id="@+id/login_loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:visibility="invisible" >

        <RelativeLayout
            android:id="@+id/login_loginLayoutSub"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginBottom="0dp"
            android:fitsSystemWindows="@bool/FALSE" >

            <EditText
                android:id="@+id/userLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/loginError"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/loginUser" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/userLogin"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/password"
                android:layout_marginRight="28dp"
                android:layout_marginTop="15dp"
                android:text="@string/loginButton" />

            <Button
                android:id="@+id/login_back"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/loginButton"
                android:layout_alignBottom="@+id/loginButton"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="@string/back" />

            <requestFocus />

            <TextView
                android:id="@+id/loginError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/loginError"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="invisible" />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/login_new_scroll"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:visibility="invisible" >

        <LinearLayout
            android:id="@+id/login_new"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:id="@+id/login_newUserError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/login_new_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textFilter"
                android:singleLine="true" />

            <EditText
                android:id="@+id/login_new_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <EditText
                android:id="@+id/login_new_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/firstName"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <EditText
                android:id="@+id/login_new_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <EditText
                android:id="@+id/login_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <EditText
                android:id="@+id/login_new_passwordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_confirm"
                android:inputType="textPassword"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right" >

                <Button
                    android:id="@+id/login_new_back"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="0.3"
                    android:text="@string/back" />

                <TextView
                    android:id="@+id/qwerahjgkhkwjf"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text=" "
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:id="@+id/login_new_submit"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/submit" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp" >
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/login_mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center|top"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/relation_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="25dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/long_logo" />
        
        <Button
            android:id="@+id/login_newUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/login_login"
            android:layout_margin="30dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-thin"
            android:background="@color/blue"
            android:text="@string/login_newUser"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/relation_pic"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="sans-serif-thin"
            android:layout_marginTop="17dp"
            android:background="@color/blue"
            android:text="@string/loginButton"
            android:textColor="@color/white" />

        <com.facebook.widget.LoginButton
            android:id="@+id/login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_newUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:text="LoginButton" />

    </RelativeLayout>

</RelativeLayout>